ensure BS dropdowns are not cut off in (small) changelist tables

--- a/frontend/scss/app.scss
+++ b/frontend/scss/app.scss
@@ -108,6 +108,11 @@ body[class=""] #branding {
     display: block; 
 }
 
+// Ensure BS dropdowns are not cut off:
+body #changelist-form .results {
+    overflow-x: visible;
+}
+
 
 .alert-90-danger,
 tr.lent-state-10-unknown {
